Agregando hoja de estilo externa en cada carpeta

--- a/alineando-items/index.html
+++ b/alineando-items/index.html
@@ -45,6 +45,7 @@
     justify-self: valor;
 */
   </style>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <section class="container">
