--- a/filas/index.html
+++ b/filas/index.html
@@ -29,6 +29,7 @@
       line-height: 24px;
     }
   </style>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <section class="container">
