--- a/funciones/index.html
+++ b/funciones/index.html
@@ -53,6 +53,7 @@
       background: yellow;
     }
   </style>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <section class="container">
