--- a/nombre-lineas/index.html
+++ b/nombre-lineas/index.html
@@ -53,6 +53,7 @@
       /* grid-column: 2 / 4; */
     }
   </style>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <section class="container">
