--- a/alineando-contenido/index.html
+++ b/alineando-contenido/index.html
@@ -35,6 +35,7 @@
       border: 1px solid red;
     }
   </style>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <section class="container">
