--- a/column-size/index.html
+++ b/column-size/index.html
@@ -44,6 +44,7 @@
       grid-column: 2 / 4;
     }
   </style>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <section class="container">
