--- a/columnas/index.html
+++ b/columnas/index.html
@@ -20,6 +20,7 @@
       border: 1px solid red;
     }
   </style>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <section class="container">
